src/test/ui/resolve/issue-22692.stderr
error[E0423]: expected value, found struct `String`
  --> $DIR/issue-22692.rs:12:13
   |
12 |     let _ = String.new();
   |             ^^^^^^ did you mean `String { /* fields */ }`?

error: aborting due to previous error

